# DMcode_print

./: .gitignore  AGENTS.md  main.py  main.qml  pyproject.toml  requirements.txt
dm_printer/: __init__.py  __main__.py  backend.py  code_generator.py  label_renderer.py  main_window.py  page_renderer.py  printer_backend.py  zpl_generator.py
